User:Group: set persistent/data path permissions/user/group based on the given values

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ Makefile
 */*/*/Makefile
 */*/WPEFramework*Config.cmake
 */*/WPEFramework*ConfigVersion.cmake
+*/*/CompileSettingsDebugConfig.cmake
+*/*/CompileSettingsDebugConfigVersion.cmake
 *.pc
 *.so.*
 *.so
